[package]
name = "ww-macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.60", features = ["full"] }
quote = "1.0"
wasm-bindgen = "0.2.92"
bincode = "2.0.0-rc.3"
js-sys = "0.3.69"
